Make session uuid rotation dependant on events being tracked (close #366)